--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
       <li><strong>10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</strong></li>
-      <li><strong>10/2025, our paper PlaCoB received the Best Paper Award in IEEE MASS 2025, congratulations.</strong></li>
+      <li><strong>10/2025, our paper PlaCoB received the <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</strong></li>
       <li><strong>10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</strong></li>
       <li><strong>08/2025, Jaskirat and Ashwin received EXP+ and STG grants to attend IEEE MASS 2025.</strong></li>
       <li><strong>08/2025, one paper accepted at IEEE DSC 2025, congratulations.</strong></li>
@@ -171,7 +171,7 @@
         <br>
         Jaskirat Sudan*^,  Fatima Qasem*^, Hasky E Fynn*^, Fatima Mohammed*, Ashwin Sarvadey*, Tian Xie, Ang Li, and <strong>Xiao Zhang</strong>         
         <br>
-        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> <a style="color: #447ec9" href="https://youtu.be/VeroL6rs1k0?si=kqbgS8GRsyIb9BpZ">teaser</a> 
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> | <a style="color: #447ec9" href="https://youtu.be/VeroL6rs1k0?si=kqbgS8GRsyIb9BpZ">teaser</a> 
         </p>
 
       <p>
@@ -179,7 +179,7 @@
         <br>
         Griffin Klevering*, Kanishka P Wijewardena*, <strong>Xiao Zhang</strong>, and Li Xiao        
         <br>
-        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a>  <em style="color: #c22020">Best Paper Award</em> 
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> | <a style="color: #c22020">Best Paper Award</a> 
         </p>
 
       <p>
@@ -524,9 +524,9 @@
       <li> 2025, SURE Program, UM-Dearborn</li>
       <li> 2025, NeTS ECI Travel Grant, NSF</li>
       <li> 2024, Regional I-Corps Fund, NSF</li>
-      <li> 2024, RAG Grant, UM-Dearborn</li>
-      <li> 2023/2021/2019, Graduate Office Fellowship, MSU</li>
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-awards" style="display:none;">2024, RAG Grant, UM-Dearborn</li>
+      <li class="more-awards" style="display:none;">2023/2021/2019, Graduate Office Fellowship, MSU</li>
       <li class="more-awards" style="display:none;">2023, Dissertation Completion Fellowship, MSU</li>
       <li class="more-awards" style="display:none;">2022, Graduate Travel Fellowship, MSU</li>
       <li class="more-awards" style="display:none;">2019, mmWave-RCN Student Travel Grant, NSF</li>
