--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
       <li><strong>10/2025, our paper about 5G/4G security received the <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</strong></li>
+      <li><strong>10/2025, invited to serve as TPC of IEEE ICNC 2026.</strong></li>
       <li><strong>10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</strong></li>
       <li><strong>10/2025, our paper PlaCoB received the <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</strong></li>
       <li><strong>10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</strong></li>
@@ -566,7 +567,7 @@
     <ul>
           <p><li> <strong>Program Committee</strong>  
           <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
-            <em>INFOCOM DeepWireless 2025, ICNC 2025, MSN 2024, ICPADS 2024, ICPADS 2025 </em>        </p>
+            <em>ICNC 2026, INFOCOM DeepWireless 2025, ICNC 2025, MSN 2024, ICPADS 2024, ICPADS 2025 </em>        </p>
   
       <p><li> <strong>External Reviewer</strong>  
         <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
