--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
       <li><strong>10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</strong></li>
-      <li><strong>10/2025, invited to serve as TPC of IEEE ICNC 2026.</strong></li>
+      <li><strong>10/2025, invited to serve as TPC member of IEEE ICNC 2026.</strong></li>
       <li><strong>10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</strong></li>
       <li><strong>10/2025, our paper PlaCoB received <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</strong></li>
       <li><strong>10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</strong></li>
@@ -115,11 +115,11 @@
       <li class="more-news" style="display:none;"><strong>05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</strong></li>
       <li class="more-news" style="display:none;"><strong>04/2025, invited to serve as NSF panelist.</strong></li>
       <li class="more-news" style="display:none;"><strong>03/2025, received Creative Teaching fund, thanks UM-Dearborn.</strong></li>
-      <li class="more-news" style="display:none;"><strong>01/2025, invited to serve as TPC of IEEE INFOCOM DeepWireless 2025.</strong></li>
-      <li class="more-news" style="display:none;"><strong>10/2024, invited to serve as TPC of IEEE ICNC 2025.</strong></li>
+      <li class="more-news" style="display:none;"><strong>01/2025, invited to serve as TPC member of IEEE INFOCOM DeepWireless 2025.</strong></li>
+      <li class="more-news" style="display:none;"><strong>10/2024, invited to serve as TPC member of IEEE ICNC 2025.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
-      <li class="more-news" style="display:none;"><strong>07/2024, invited to serve as TPC of IEEE ICPADS 2024.</strong></li>
-      <li class="more-news" style="display:none;"><strong>05/2024, invited to serve as TPC of IEEE MSN 2024.</strong></li>
+      <li class="more-news" style="display:none;"><strong>07/2024, invited to serve as TPC member of IEEE ICPADS 2024.</strong></li>
+      <li class="more-news" style="display:none;"><strong>05/2024, invited to serve as TPC member of IEEE MSN 2024.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2023, joined Duke University as a Postdoctoral Associate.</strong></li>
       <li class="more-news" style="display:none;"><strong>05/2023, successfully defended my Ph.D. thesis.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2022, passed comprehensive exam.</strong></li>
