--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <br>
         Munshi Saifuzzaman, Ke Xie, Tian Xie, <strong>Xiao Zhang</strong>, and Xinyu Lei          
         <br>
-        <em>DSC</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+        <em>DSC</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> | <a style="color: #c22020">Best Paper Award</a> 
         </p>
 
       <p>
