--- a/index.html
+++ b/index.html
@@ -483,8 +483,6 @@
             <br> 
             Fatima Mohammed （NSF STEM Scholar）
             <br> 
-            Syed Gilani （UM SURE Scholar）
-            <br> 
             Zhalgas Tileumuratin
             </p>
 
@@ -500,6 +498,8 @@
             <li><strong>alumni</strong>
             <br> 
             Deniz Acikbas (now Ph.D. at UM-Dearborn)
+            <br> 
+            Syed Gilani （UM SURE Scholar）
             <br> 
             Jaskirat Sudan 
             <br> 
@@ -526,8 +526,8 @@
       <li> 2025, Creative Teaching Fund, UM-Dearborn</li>
       <li> 2025, SURE Program, UM-Dearborn</li>
       <li> 2025, NeTS ECI Travel Grant, NSF</li>
-      <li> 2024, Regional I-Corps Fund, NSF</li>
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-awards" style="display:none;">2024, Regional I-Corps Fund, NSF</li>
       <li class="more-awards" style="display:none;">2024, RAG Grant, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2023/2021/2019, Graduate Office Fellowship, MSU</li>
       <li class="more-awards" style="display:none;">2023, Dissertation Completion Fellowship, MSU</li>
