--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
+      <li><strong>11/2025, invited to serve as TPC member of IEEE SECON 2026.</strong></li>
       <li><strong>11/2025, invited to serve as TPC member of IEEE MOST 2026.</strong></li>
       <li><strong>10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</strong></li>
       <li><strong>10/2025, invited to serve as TPC member of IEEE ICNC 2026.</strong></li>
@@ -103,8 +104,8 @@
       <li><strong>10/2025, our paper PlaCoB received <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</strong></li>
       <li><strong>10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</strong></li>
       <li><strong>08/2025, Jaskirat and Ashwin received EXP+ and STG grants to attend IEEE MASS 2025.</strong></li>
-      <li><strong>08/2025, one paper accepted at IEEE DSC 2025, congratulations.</strong></li>
-
+      
+      <li class="more-news" style="display:none;"><strong>08/2025, one paper accepted at IEEE DSC 2025, congratulations.</strong></li>
       <li class="more-news" style="display:none;"><strong>08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</strong></li>
       <li class="more-news" style="display:none;"><strong>08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</strong></li>
       <li class="more-news" style="display:none;"><strong>08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</strong></li>
@@ -472,8 +473,8 @@
             <li><strong>master</strong>
             <br> 
             Ashwin Sarvadey 
-           <br> 
-            Shamit Dholakiya 
+            <br> 
+            Selase Doku 
             </p>
 
           <p>
@@ -501,6 +502,8 @@
             <br> 
             Deniz Acikbas (now Ph.D. at UM-Dearborn)
             <br> 
+            Shamit Dholakiya
+            <br>
             Syed Gilani （UM SURE Scholar）
             <br> 
             Jaskirat Sudan 
@@ -569,7 +572,7 @@
     <ul>
           <p><li> <strong>Program Committee</strong>  
           <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
-            <em>ICNC 2026, INFOCOM DeepWireless 2025, ICNC 2025, MSN 2024, ICPADS 2024, ICPADS 2025 </em>        </p>
+            <em>SECON 2026, MOST 2026, ICNC 2026, INFOCOM DeepWireless 2025, ICPADS 2025， ICNC 2025, MSN 2024, ICPADS 2024 </em>        </p>
   
       <p><li> <strong>External Reviewer</strong>  
         <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
