--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
     <ul>
           <p><li> <strong>Program Committee</strong>  
           <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
-            <em>SECON 2026, MOST 2026, ICNC 2026, INFOCOM DeepWireless 2025, ICPADS 2025， ICNC 2025, MSN 2024, ICPADS 2024 </em>        </p>
+            <em>SECON 2026, MOST 2026, ICNC 2026, INFOCOM DeepWireless 2025, ICPADS 2025, ICNC 2025, MSN 2024, ICPADS 2024 </em>        </p>
   
       <p><li> <strong>External Reviewer</strong>  
         <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
