--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
+      <li><strong>11/2025, invited to serve as NSF panelist.</strong></li>
       <li><strong>11/2025, invited to serve as TPC member of IEEE SECON 2026.</strong></li>
       <li><strong>11/2025, invited to serve as TPC member of IEEE MOST 2026.</strong></li>
       <li><strong>10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</strong></li>
@@ -103,8 +104,8 @@
       <li><strong>10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</strong></li>
       <li><strong>10/2025, our paper PlaCoB received <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</strong></li>
       <li><strong>10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</strong></li>
-      <li><strong>08/2025, Jaskirat and Ashwin received EXP+ and STG grants to attend IEEE MASS 2025.</strong></li>
-      
+
+      <li class="more-news" style="display:none;"><strong>08/2025, Jaskirat and Ashwin received EXP+ and STG grants to attend IEEE MASS 2025.</strong></li>
       <li class="more-news" style="display:none;"><strong>08/2025, one paper accepted at IEEE DSC 2025, congratulations.</strong></li>
       <li class="more-news" style="display:none;"><strong>08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</strong></li>
       <li class="more-news" style="display:none;"><strong>08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</strong></li>
