--- a/index.html
+++ b/index.html
@@ -96,16 +96,18 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
+      <li><strong>12/2025, received FRMG grant for indoor robot self-localization, thanks UM-Dearborn.</strong></li>
+      <li><strong>12/2025, received RAG grant for AI-enabled contactless battery sensing, thanks UM-Dearborn.</strong></li>
+      <li><strong>12/2025, received Academic Innovation Fund for Michigan Online Content Integration, thanks UM.</strong></li>
       <li><strong>11/2025, invited to serve as local chair of EAI SmartSP 2026.</strong></li>
       <li><strong>11/2025, invited to serve as NSF panelist.</strong></li>
       <li><strong>11/2025, invited to serve as TPC member of IEEE SECON 2026.</strong></li>
       <li><strong>11/2025, invited to serve as TPC member of IEEE MOST 2026.</strong></li>
       <li><strong>10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</strong></li>
-      <li><strong>10/2025, invited to serve as TPC member of IEEE ICNC 2026.</strong></li>
-      <li><strong>10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</strong></li>
-      <li><strong>10/2025, our paper PlaCoB received <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</strong></li>
       
-
+      <li class="more-news" style="display:none;"><strong>10/2025, invited to serve as TPC member of IEEE ICNC 2026.</strong></li>
+      <li class="more-news" style="display:none;"><strong>10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</strong></li>
+      <li class="more-news" style="display:none;"><strong>10/2025, our paper PlaCoB received <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</strong></li>
       <li class="more-news" style="display:none;"><strong>10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</strong></li>
       <li class="more-news" style="display:none;"><strong>08/2025, Jaskirat and Ashwin received EXP+ and STG grants to attend IEEE MASS 2025.</strong></li>
       <li class="more-news" style="display:none;"><strong>08/2025, one paper accepted at IEEE DSC 2025, congratulations.</strong></li>
@@ -526,15 +528,18 @@
     <h2>Awards</h2>
     <ul id="awards-list">
       <!-- <li><strong></strong></li> -->
+      <li> 2025, FRMG Grant, UM-Dearborn</li>
+      <li> 2025, RAG Grant, UM-Dearborn</li>
+      <li> 2025, Academic Innovation Fund, UM</li>
       <li> 2025, Best Paper Award, IEEE DSC</li>
       <li> 2025, Best Paper Award, IEEE MASS</li>
       <li> 2025, IHP Research and Engagement Grant, UM</li>
       <li> 2025, OE Review Grant, UM-Dearborn</li>
       <li> 2025, OE Creation Grant, UM-Dearborn</li>
-      <li> 2025, Creative Teaching Fund, UM-Dearborn</li>
-      <li> 2025, SURE Program, UM-Dearborn</li>
-      <li> 2025, NeTS ECI Travel Grant, NSF</li>
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-awards" style="display:none;">2025, Creative Teaching Fund, UM-Dearborn</li>
+      <li class="more-awards" style="display:none;">2025, SURE Program, UM-Dearborn</li>
+      <li class="more-awards" style="display:none;">2025, NeTS ECI Travel Grant, NSF</li>
       <li class="more-awards" style="display:none;">2024, Regional I-Corps Fund, NSF</li>
       <li class="more-awards" style="display:none;">2024, RAG Grant, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2023/2021/2019, Graduate Office Fellowship, MSU</li>
