--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
+      <li><strong>12/2025, one paper accepted at IEEE Trans. on Mobile Computing, congratulations.</strong></li>
       <li><strong>12/2025, received FRMG grant for indoor robot self-localization, thanks UM-Dearborn.</strong></li>
       <li><strong>12/2025, received RAG grant for AI-enabled contactless battery sensing, thanks UM-Dearborn.</strong></li>
       <li><strong>12/2025, received Academic Innovation Fund for Michigan Online Content Integration, thanks UM.</strong></li>
@@ -103,8 +104,8 @@
       <li><strong>11/2025, invited to serve as NSF panelist.</strong></li>
       <li><strong>11/2025, invited to serve as TPC member of IEEE SECON 2026.</strong></li>
       <li><strong>11/2025, invited to serve as TPC member of IEEE MOST 2026.</strong></li>
-      <li><strong>10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</strong></li>
-      
+   
+      <li class="more-news" style="display:none;"><strong>10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</strong></li>
       <li class="more-news" style="display:none;"><strong>10/2025, invited to serve as TPC member of IEEE ICNC 2026.</strong></li>
       <li class="more-news" style="display:none;"><strong>10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</strong></li>
       <li class="more-news" style="display:none;"><strong>10/2025, our paper PlaCoB received <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</strong></li>
@@ -316,6 +317,16 @@
 
     <h4> Journal Papers</h4>
     <ol>
+      <p>
+        <li><strong>Privacy-Protected Hand Pose Reconstruction and Air Writing via Rolling Spheres</strong>
+        <br>
+        <strong>Xiao Zhang</strong>, Deniz Acikbas*, Soham Naik*, Griffin Klevering*, Juexing Wang, Zaynab Mourtada*, Li Xiao, and Tianxing Li
+        <br>
+        <em>IEEE Transactions on Mobile Computing</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+      </p>
+
+
+
       <p>
         <li><strong>Uncovering Risks of Data-Free Feature Vector Inversion Attacks Against Vector Databases</strong>
         <br>
