--- a/index.html
+++ b/index.html
@@ -96,44 +96,44 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
-      <li><strong>12/2025, one paper accepted at IEEE Trans. on Mobile Computing, congratulations.</strong></li>
-      <li><strong>12/2025, received FRMG grant for indoor robot self-localization, thanks UM-Dearborn.</strong></li>
-      <li><strong>12/2025, received RAG grant for AI-enabled contactless battery sensing, thanks UM-Dearborn.</strong></li>
-      <li><strong>12/2025, received Academic Innovation Fund for Michigan Online Content Integration, thanks UM.</strong></li>
-      <li><strong>11/2025, invited to serve as local chair of EAI SmartSP 2026.</strong></li>
-      <li><strong>11/2025, invited to serve as NSF panelist.</strong></li>
-      <li><strong>11/2025, invited to serve as TPC member of IEEE SECON 2026.</strong></li>
-      <li><strong>11/2025, invited to serve as TPC member of IEEE MOST 2026.</strong></li>
+      <li>12/2025, one paper accepted at IEEE Trans. on Mobile Computing, congratulations.</li>
+      <li>12/2025, received FRMG grant for indoor robot self-localization, thanks UM-Dearborn.</li>
+      <li>12/2025, received RAG grant for AI-enabled contactless battery sensing, thanks UM-Dearborn.</li>
+      <li>12/2025, received Academic Innovation Fund for Michigan Online Content Integration, thanks UM.</li>
+      <li>11/2025, invited to serve as local chair of EAI SmartSP 2026.</li>
+      <li>11/2025, invited to serve as NSF panelist.</li>
+      <li>11/2025, invited to serve as TPC member of IEEE SECON 2026.</li>
+      <li>11/2025, invited to serve as TPC member of IEEE MOST 2026.</li>
    
-      <li class="more-news" style="display:none;"><strong>10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</strong></li>
-      <li class="more-news" style="display:none;"><strong>10/2025, invited to serve as TPC member of IEEE ICNC 2026.</strong></li>
-      <li class="more-news" style="display:none;"><strong>10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</strong></li>
-      <li class="more-news" style="display:none;"><strong>10/2025, our paper PlaCoB received <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</strong></li>
-      <li class="more-news" style="display:none;"><strong>10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</strong></li>
-      <li class="more-news" style="display:none;"><strong>08/2025, Jaskirat and Ashwin received EXP+ and STG grants to attend IEEE MASS 2025.</strong></li>
-      <li class="more-news" style="display:none;"><strong>08/2025, one paper accepted at IEEE DSC 2025, congratulations.</strong></li>
-      <li class="more-news" style="display:none;"><strong>08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</strong></li>
-      <li class="more-news" style="display:none;"><strong>08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</strong></li>
-      <li class="more-news" style="display:none;"><strong>08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</strong></li>
-      <li class="more-news" style="display:none;"><strong>08/2025, ViKey demo accepted at IEEE MASS 2025 as poster, congratulations.</strong></li>
-      <li class="more-news" style="display:none;"><strong>08/2025, invited to serve as TPC of IEEE ICPADS 2025.</strong></li>
-      <li class="more-news" style="display:none;"><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</strong></li>
-      <li class="more-news" style="display:none;"><strong>07/2025, received IHP Research and Engagement Fund, thanks UM.</strong></li>
-      <li class="more-news" style="display:none;"><strong>06/2025, received OE Review grant, thanks OE committee.</strong></li>
-      <li class="more-news" style="display:none;"><strong>05/2025, received OE Creation grant, thanks OE committee.</strong></li>
-      <li class="more-news" style="display:none;"><strong>05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</strong></li>
-      <li class="more-news" style="display:none;"><strong>04/2025, invited to serve as NSF panelist.</strong></li>
-      <li class="more-news" style="display:none;"><strong>03/2025, received Creative Teaching fund, thanks UM-Dearborn.</strong></li>
-      <li class="more-news" style="display:none;"><strong>01/2025, invited to serve as TPC member of IEEE INFOCOM DeepWireless 2025.</strong></li>
-      <li class="more-news" style="display:none;"><strong>10/2024, invited to serve as TPC member of IEEE ICNC 2025.</strong></li>
-      <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
-      <li class="more-news" style="display:none;"><strong>07/2024, invited to serve as TPC member of IEEE ICPADS 2024.</strong></li>
-      <li class="more-news" style="display:none;"><strong>05/2024, invited to serve as TPC member of IEEE MSN 2024.</strong></li>
-      <li class="more-news" style="display:none;"><strong>09/2023, joined Duke University as a Postdoctoral Associate.</strong></li>
-      <li class="more-news" style="display:none;"><strong>05/2023, successfully defended my Ph.D. thesis.</strong></li>
-      <li class="more-news" style="display:none;"><strong>09/2022, passed comprehensive exam.</strong></li>
-      <li class="more-news" style="display:none;"><strong>01/2020, passed qualification exam.</strong></li>
-      <li class="more-news" style="display:none;"><strong>01/2019, started PhD journey.</strong></li>
+      <li class="more-news" style="display:none;">10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</li>
+      <li class="more-news" style="display:none;">10/2025, invited to serve as TPC member of IEEE ICNC 2026.</li>
+      <li class="more-news" style="display:none;">10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</li>
+      <li class="more-news" style="display:none;">10/2025, our paper PlaCoB received <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</li>
+      <li class="more-news" style="display:none;">10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</li>
+      <li class="more-news" style="display:none;">08/2025, Jaskirat and Ashwin received EXP+ and STG grants to attend IEEE MASS 2025.</li>
+      <li class="more-news" style="display:none;">08/2025, one paper accepted at IEEE DSC 2025, congratulations.</li>
+      <li class="more-news" style="display:none;">08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</li>
+      <li class="more-news" style="display:none;">08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</li>
+      <li class="more-news" style="display:none;">08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</li>
+      <li class="more-news" style="display:none;">08/2025, ViKey demo accepted at IEEE MASS 2025 as poster, congratulations.</li>
+      <li class="more-news" style="display:none;">08/2025, invited to serve as TPC of IEEE ICPADS 2025.</li>
+      <li class="more-news" style="display:none;">07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</li>
+      <li class="more-news" style="display:none;">07/2025, received IHP Research and Engagement Fund, thanks UM.</li>
+      <li class="more-news" style="display:none;">06/2025, received OE Review grant, thanks OE committee.</li>
+      <li class="more-news" style="display:none;">05/2025, received OE Creation grant, thanks OE committee.</li>
+      <li class="more-news" style="display:none;">05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</li>
+      <li class="more-news" style="display:none;">04/2025, invited to serve as NSF panelist.</li>
+      <li class="more-news" style="display:none;">03/2025, received Creative Teaching fund, thanks UM-Dearborn.</li>
+      <li class="more-news" style="display:none;">01/2025, invited to serve as TPC member of IEEE INFOCOM DeepWireless 2025.</li>
+      <li class="more-news" style="display:none;">10/2024, invited to serve as TPC member of IEEE ICNC 2025.</li>
+      <li class="more-news" style="display:none;">09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</li>
+      <li class="more-news" style="display:none;">07/2024, invited to serve as TPC member of IEEE ICPADS 2024.</li>
+      <li class="more-news" style="display:none;">05/2024, invited to serve as TPC member of IEEE MSN 2024.</li>
+      <li class="more-news" style="display:none;">09/2023, joined Duke University as a Postdoctoral Associate.</li>
+      <li class="more-news" style="display:none;">05/2023, successfully defended my Ph.D. thesis.</li>
+      <li class="more-news" style="display:none;">09/2022, passed comprehensive exam.</li>
+      <li class="more-news" style="display:none;">01/2020, passed qualification exam.</li>
+      <li class="more-news" style="display:none;">01/2019, started PhD journey.</li>
       
    </ul>
       <button id="toggle-btn" class="w3-button w3-margin-top" style="background: transparent; border: none; color: #447ec9; cursor: pointer;">
@@ -174,7 +174,7 @@
         <br>
         Munshi Saifuzzaman, Ke Xie, Tian Xie, <strong>Xiao Zhang</strong>, and Xinyu Lei          
         <br>
-        <em>DSC</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> | <a style="color: #c22020">Best Paper Award</a> 
+        <em>DSC</em> 2025 | <a style="color: #447ec9" href="">paper</a> | <a style="color: #c22020">Best Paper Award</a> 
         </p>
 
       <p>
@@ -182,7 +182,7 @@
         <br>
         Jaskirat Sudan*^,  Fatima Qasem*^, Hasky E Fynn*^, Fatima Mohammed*, Ashwin Sarvadey*, Tian Xie, Ang Li, and <strong>Xiao Zhang</strong>         
         <br>
-        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> | <a style="color: #447ec9" href="https://youtu.be/VeroL6rs1k0?si=kqbgS8GRsyIb9BpZ">teaser</a> 
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href="">paper</a> | <a style="color: #447ec9" href="https://youtu.be/VeroL6rs1k0?si=kqbgS8GRsyIb9BpZ">teaser</a> 
         </p>
 
       <p>
@@ -190,7 +190,7 @@
         <br>
         Griffin Klevering*, Kanishka P Wijewardena*, <strong>Xiao Zhang</strong>, and Li Xiao        
         <br>
-        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> | <a style="color: #c22020">Best Paper Award</a> 
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href="">paper</a> | <a style="color: #c22020">Best Paper Award</a> 
         </p>
 
       <p>
@@ -198,7 +198,7 @@
         <br>
         Kanishka P Wijewardena*, Griffin Klevering*, <strong>Xiao Zhang</strong>, and Li Xiao    
         <br>
-        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href="">paper</a> 
         </p>
 
       <p>
@@ -214,7 +214,7 @@
         <br>
         Hanqing Guo, Guangjing Wang, Bocheng Chen, Yuanda Wang, <strong>Xiao Zhang</strong>, Xun Chen, Qiben Yan, Li Xiao       
         <br>
-        <em>MobiCom</em> 2024 | <a style="color: #447ec9" href="">paper</a> 
+        <em>MobiCom</em> 2024 | <a style="color: #447ec9" href="https://dl.acm.org/doi/pdf/10.1145/3636534.3690692">paper</a> 
         </p>
 
 
@@ -223,7 +223,7 @@
         <br>
         David Hunt, Shaocheng Luo, Amir Khazraei, <strong>Xiao Zhang</strong>, Spencer Hallyburton, Tingjun Chen, Miroslav Pajic        
         <br>
-        <em>ICRA</em> 2024 | <a style="color: #447ec9" href="">paper</a> 
+        <em>ICRA</em> 2024 | <a style="color: #447ec9" href="https://arxiv.org/pdf/2403.05964">paper</a> 
         </p>
 
       <p>
@@ -322,7 +322,7 @@
         <br>
         <strong>Xiao Zhang</strong>, Deniz Acikbas*, Soham Naik*, Griffin Klevering*, Juexing Wang, Zaynab Mourtada*, Li Xiao, and Tianxing Li
         <br>
-        <em>IEEE Transactions on Mobile Computing</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+        <em>IEEE Transactions on Mobile Computing</em> 2025 | <a style="color: #447ec9" href="">paper</a> 
       </p>
 
 
@@ -332,7 +332,7 @@
         <br>
         Shengyang Qin, Xinyu Lei, Nankun Mu, Hongyu Huang, Tian Xie, and <strong>Xiao Zhang</strong> 
         <br>
-        <em>IEEE Transactions on Dependable and Secure Computing</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+        <em>IEEE Transactions on Dependable and Secure Computing</em> 2025 | <a style="color: #447ec9" href="https://ieeexplore.ieee.org/document/11146802">paper</a> 
       </p>
 
       <p>
@@ -382,7 +382,7 @@
         <br>
         Hasky E Fynn*, Jaskirat Suda*, Fatima Qasem*, Fatima Mohammed*, and <strong>Xiao Zhang</strong>   
         <br>
-        <em>MASS Demo</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+        <em>MASS Demo</em> 2025 | <a style="color: #447ec9" href="">paper</a> 
       </p>
 
       <p>
@@ -392,6 +392,15 @@
         <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka  
         <br>
         <em>SIGCOMM Poster</em> 2024 | <a style="color: #447ec9" href="https://dl.acm.org/doi/abs/10.1145/3672202.3673726">paper</a> 
+      </p>
+
+      <p>
+        <li><strong>RadCloud: Real-Time High-Resolution Point Cloud Generation Using Low-Cost mmWave Radars for Aerial and Ground Vehicles
+        </strong>
+        <br>
+        David Hunt, Shaocheng Luo, Amir Khazraei, <strong>Xiao Zhang</strong>, Spencer Hallyburton, Tingjun Chen, Miroslav Pajic  
+        <br>
+        <em>MobiCom Demo</em> 2024 | <a style="color: #447ec9" href="https://dl.acm.org/doi/pdf/10.1145/3636534.3698849">paper</a> 
       </p>
 
       <p>
