--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
+      <li>12/2025, invited to serve as TPC member of IEEE ICDCS 2026.</li>
       <li>12/2025, one paper accepted at IEEE Trans. on Mobile Computing, congratulations.</li>
       <li>12/2025, received FRMG grant for indoor robot self-localization, thanks UM-Dearborn.</li>
       <li>12/2025, received RAG grant for AI-enabled contactless battery sensing, thanks UM-Dearborn.</li>
@@ -103,8 +104,8 @@
       <li>11/2025, invited to serve as local chair of EAI SmartSP 2026.</li>
       <li>11/2025, invited to serve as NSF panelist.</li>
       <li>11/2025, invited to serve as TPC member of IEEE SECON 2026.</li>
-      <li>11/2025, invited to serve as TPC member of IEEE MOST 2026.</li>
-   
+
+      <li class="more-news" style="display:none;">11/2025, invited to serve as TPC member of IEEE MOST 2026.</li>
       <li class="more-news" style="display:none;">10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</li>
       <li class="more-news" style="display:none;">10/2025, invited to serve as TPC member of IEEE ICNC 2026.</li>
       <li class="more-news" style="display:none;">10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</li>
