--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
+      <li>01/2026, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</li>
       <li>12/2025, invited to serve as TPC member of IEEE ICDCS 2026.</li>
       <li>12/2025, one paper accepted at IEEE Trans. on Mobile Computing, congratulations.</li>
       <li>12/2025, received FRMG grant for indoor robot self-localization, thanks UM-Dearborn.</li>
@@ -103,14 +104,15 @@
       <li>12/2025, received Academic Innovation Fund for Michigan Online Content Integration, thanks UM.</li>
       <li>11/2025, invited to serve as local chair of EAI SmartSP 2026.</li>
       <li>11/2025, invited to serve as NSF panelist.</li>
-      <li>11/2025, invited to serve as TPC member of IEEE SECON 2026.</li>
+      
 
+      <li class="more-news" style="display:none;">11/2025, invited to serve as TPC member of IEEE SECON 2026.</li>
       <li class="more-news" style="display:none;">11/2025, invited to serve as TPC member of IEEE MOST 2026.</li>
       <li class="more-news" style="display:none;">10/2025, our security paper received <a style="color: #c22020">Best Paper Award</a> in IEEE DSC 2025, congratulations.</li>
       <li class="more-news" style="display:none;">10/2025, invited to serve as TPC member of IEEE ICNC 2026.</li>
       <li class="more-news" style="display:none;">10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</li>
       <li class="more-news" style="display:none;">10/2025, our paper PlaCoB received <a style="color: #c22020">Best Paper Award</a> in IEEE MASS 2025, congratulations.</li>
-      <li class="more-news" style="display:none;">10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</li>
+      <li class="more-news" style="display:none;">10/2025, invited to give a guest lecture at MSU about optical wireless communication and sensing.</li>
       <li class="more-news" style="display:none;">08/2025, Jaskirat and Ashwin received EXP+ and STG grants to attend IEEE MASS 2025.</li>
       <li class="more-news" style="display:none;">08/2025, one paper accepted at IEEE DSC 2025, congratulations.</li>
       <li class="more-news" style="display:none;">08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</li>
@@ -317,6 +319,19 @@
 
     <h4> Journal Papers</h4>
     <ol>
+
+
+      <p>
+        <li><strong>Enjoy Without Payment: Model Parasitic Attacks Against Transfer Learning Models</strong>
+        <br>
+        Jinxue Zhao, Xinyu Lei, Hongyu Huang, Nankun Mu, Chao Chen, and <strong>Xiao Zhang</strong>
+        <br>
+        <em>IEEE Transactions on Dependable and Secure Computing</em> 2025 | <a style="color: #447ec9" href="">paper</a> 
+      </p>
+
+
+
+
       <p>
         <li><strong>Privacy-Protected Hand Pose Reconstruction and Air Writing via Rolling Spheres</strong>
         <br>
@@ -466,6 +481,8 @@
           CIS 400 Programming Languages  
           <br> 
           CIS 437/537 Advanced Networking    
+          <br> 
+          CIS 546 Security and Privacy in Wireless Networks  
           </p>
 
           <p>
