--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
-      <li>01/2026, one paper accepted at ICC 2026, congratulations.</li>
+      <li>01/2026, one paper accepted at IEEE ICC 2026, congratulations.</li>
       <li>01/2026, invited to serve as TPC member of IEEE INFOCOM DeepWireless 2026.</li>
       <li>01/2026, partnered with LAHC on K-12 STEM outreach.</li>
       <li>01/2026, invited to give an AI-related speech at the College of Business, UM-Dearborn.</li> 
