--- a/index.html
+++ b/index.html
@@ -523,6 +523,8 @@
             Ashwin Sarvadey 
             <br> 
             Selase Doku 
+            <br> 
+            Rathikadevi Mani 
             </p>
 
           <p>
@@ -533,6 +535,8 @@
             Fatima Qasem （NSF STEM Scholar）
             <br> 
             Fatima Mohammed （NSF STEM Scholar）
+            <br> 
+            Zubair Shareef （NSF STEM Scholar）
             <br> 
             Zhalgas Tileumuratin
             </p>
@@ -571,6 +575,7 @@
     <h2>Awards</h2>
     <ul id="awards-list">
       <!-- <li><strong></strong></li> -->
+      <li> 2026, Bold Challenges and AIIM Seed Networking Award, UM</li>
       <li> 2025, FRMG Grant, UM-Dearborn</li>
       <li> 2025, RAG Grant, UM-Dearborn</li>
       <li> 2025, Academic Innovation Fund, UM</li>
@@ -578,8 +583,9 @@
       <li> 2025, Best Paper Award, IEEE MASS</li>
       <li> 2025, IHP Research and Engagement Grant, UM</li>
       <li> 2025, OE Review Grant, UM-Dearborn</li>
-      <li> 2025, OE Creation Grant, UM-Dearborn</li>
+
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-awards" style="display:none;">2025, OE Creation Grant, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2025, Creative Teaching Fund, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2025, SURE Program, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2025, NeTS ECI Travel Grant, NSF</li>
