--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <!-- The Home Section -->
     <div class="w3-container w3-center w3-padding-32" id="home">
-      <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/xiao_round_um_2.png">
+      <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/round.png">
       <h1><a>Xiao Zhang</a></h1>
 
         <p class="w3-center">
