--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
+      <li>02/2026, one paper accepted at IEEE Trans. on Sensor Networks, congratulations.</li>
       <li>01/2026, received two Bold Challenges and AIIM Seed Networking Awards for smart manufacturing, thanks UM.</li>
       <li>01/2026, one paper accepted at IEEE ICC 2026, congratulations.</li>
       <li>01/2026, invited to serve as TPC member of IEEE INFOCOM DeepWireless 2026.</li>
@@ -103,9 +104,9 @@
       <li>01/2026, invited to give an AI-related speech at the College of Business, UM-Dearborn.</li> 
       <li>01/2026, one paper accepted at Ubicomp 2026, congratulations.</li> 
       <li>01/2026, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</li>
-      <li>12/2025, invited to serve as TPC member of IEEE ICDCS 2026.</li>
       
       
+      <li class="more-news" style="display:none;">12/2025, invited to serve as TPC member of IEEE ICDCS 2026.</li>
       <li class="more-news" style="display:none;">12/2025, one paper accepted at IEEE Trans. on Mobile Computing, congratulations.</li>
       <li class="more-news" style="display:none;">12/2025, received FRMG grant for indoor robot self-localization, thanks UM-Dearborn.</li>
       <li class="more-news" style="display:none;">12/2025, received RAG grant for AI-enabled contactless battery sensing, thanks UM-Dearborn.</li>
