--- a/index.html
+++ b/index.html
@@ -178,6 +178,16 @@
     
     <ol>
 
+
+
+      <p>
+        <li><strong>BYOD-Gait: Spoofing Proof Gait Authentication with User-Owned Device</strong>
+        <br>
+        Khairul Mottakin, <strong>Xiao Zhang</strong>, and Zheng Song          
+        <br>
+        <em>ICC</em> 2026 | <a style="color: #447ec9" href="">paper</a> 
+        </p>
+
       <p>
         <li><strong>Dissecting Privacy-Exposing Identifiers in 5G/4G Networks</strong>
         <br>
