--- a/index.html
+++ b/index.html
@@ -337,6 +337,13 @@
     <h4> Journal Papers</h4>
     <ol>
 
+      <p>
+        <li><strong>RainbowRow: Exploiting 2D Rolling Blocks for Improved LED-Camera Communication</strong>
+        <br>
+        <strong>Xiao Zhang</strong>, Griffin Klevering*, James Mariani, Kanishka P Wijewardena*, Li Xiao, and Matt W. Mutka
+        <br>
+        <em>ACM Transactions on Sensor Networks</em> 2026 | <a style="color: #447ec9" href="data/TOSN_LiFOD.pdf">paper</a> 
+      </p>
 
       <p>
         <li><strong>Enjoy Without Payment: Model Parasitic Attacks Against Transfer Learning Models</strong>
